Fix draws of WebGL canvases to 2D contexts with software compositing.

This code path was using the wrong blend mode when drawing the WebGL
content to the intermediate cc::PaintImage which is then drawn to the
2D context.

Added a pixel test for this which fails before the fix, and passes
afterward. A WebGL conformance test has also been written which will
be rolled in later, but it would not catch the bug unless the tests
were run with SwiftShader - which they aren't currently on Chromium's
waterfall.

Bug: 894021
Change-Id: I77a0d4877641c545159bc43b11483b80ffc74c72
Reviewed-on: https://chromium-review.googlesource.com/c/1330890
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Reviewed-by: James Darpinian <jdarpinian@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607096}
Former-commit-id: 93925aac015056c95114b744e3fc27594be67a68